--- a/client/src/App.css
+++ b/client/src/App.css
@@ -5,38 +5,65 @@
   text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.title {
+  margin: 0 0 0.5em;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
+.board {
+  display: inline-grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 2em;
   padding: 2em;
 }
 
-.read-the-docs {
-  color: #888;
+.space {
+  border: 1px solid white;
+  cursor: pointer;
+  height: 5em;
+  width: 5em;
+}
+
+.space.x,
+.space.o {
+  border: 1px solid grey;
+  pointer-events: none;
+  position: relative;
+}
+
+.space.x::after,
+.space.x::before {
+  background: #fff;
+  content: "";
+  height: 5em;
+  -webkit-transform: translate(-50%, -50%) rotate(45deg);
+  -ms-transform: translate(-50%, -50%) rotate(45deg);
+  -o-transform: translate(-50%, -50%) rotate(45deg);
+  position: absolute;
+  right: 2.2em;
+  top: 50%;
+  transform: translate(-50%, -50%) rotate(45deg);
+  width: 5px;
+}
+.space.x::before {
+  transform: translate(-50%, -50%) rotate(-45deg);
+}
+
+.space.o::after {
+  background: transparent;
+  content: "";
+  border: 5px solid #fff;
+  border-radius: 100em;
+  height: 3.75em;
+  left: 0.3em;
+  position: absolute;
+  top: 0.3em;
+  width: 3.75em;
+}
+
+.description {
+  font-size: 1.25em;
+}
+
+.instructions {
+  font-weight: bold;
 }
