--- a/client/src/index.css
+++ b/client/src/index.css
@@ -22,9 +22,7 @@ a:hover {
 }
 
 body {
-  margin: 0;
-  display: flex;
-  place-items: center;
+  margin: 3em 0 0 0;
   min-width: 320px;
   min-height: 100vh;
 }
